# ingenic-flash-tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
embedded/: .gitignore  Makefile  README.md  firmware_blob.h  gen_blob.py  ingenic_flash.c
embedded/package/ingenic-flash/: Config.in  ingenic-flash.mk
src/ingenic_flash/: __init__.py  __main__.py  chips.py  protocol.py  spiflash_db.py  usb.py
src/ingenic_flash/firmware/: spiflashinfo.cfg
src/ingenic_flash/firmware/a1_n_ne_x/: config.cfg
src/ingenic_flash/firmware/a1_nt_a/: config.cfg
src/ingenic_flash/firmware/ad100/: config.cfg
src/ingenic_flash/firmware/c100/: config.cfg
src/ingenic_flash/firmware/jz4775/: config.cfg
src/ingenic_flash/firmware/m150/: config.cfg
src/ingenic_flash/firmware/m200/: config.cfg
src/ingenic_flash/firmware/m200s/: config.cfg
src/ingenic_flash/firmware/m210/: config.cfg
src/ingenic_flash/firmware/prj007/: config.cfg
src/ingenic_flash/firmware/prj007_sfc1/: config.cfg
src/ingenic_flash/firmware/prj008_32m/: config.cfg
src/ingenic_flash/firmware/t20/: config.cfg
src/ingenic_flash/firmware/t21/: config.cfg
src/ingenic_flash/firmware/t23/: config.cfg
src/ingenic_flash/firmware/t30x/: config.cfg
src/ingenic_flash/firmware/t31/: config.cfg
src/ingenic_flash/firmware/t31x/: config.cfg
src/ingenic_flash/firmware/x1000/: config.cfg
src/ingenic_flash/firmware/x1021/: config.cfg
src/ingenic_flash/firmware/x1500/: config.cfg
src/ingenic_flash/firmware/x1520/: config.cfg
src/ingenic_flash/firmware/x1521/: config.cfg
(+7 files in other folders)
